【重大进展!】完成了访问文件列表和下载文件的方法的调用
已完成：
1.通过地址栏访问对应目录的文件列表（Enter键访问）
2.在文件列表中选中对应文件，然后点击“下载”按钮，即可把文件下载到本地（默认下载目录 C:\Users\Public\Downloads）
待完成：
1.在ListView中双击对应文件夹即可进入下一级目录
2.通过“后退”按钮返回上一级目

--- a/main_app.resx
+++ b/main_app.resx
@@ -117,6 +117,142 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="fileicon.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="fileicon.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABi
+        HQAAAk1TRnQBSQFMAgEBAwEAASABAAEgAQABQAEAAUABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        BAABAQIAAUADAAEBAQABCAYAAUAYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
+        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
+        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
+        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
+        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
+        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
+        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
+        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
+        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
+        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
+        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
+        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
+        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
+        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
+        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
+        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
+        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
+        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
+        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
+        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
+        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
+        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
+        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
+        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
+        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
+        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8A/wD/AP8ATwAr/xUA
+        K/+VAAH0AQcouwHzFQAB9AEHKLsB85UAAfQBtCiLAbwVAAH0AbQoiwG8lQAB8wGLKKYBBxUAAfMBiyim
+        AQeVAAHzAYsopgEHFQAB8wGLKKYBB5UAAfMBiwKmAYoBix+0AosDpgEHFQAB8wGLAqYBigGLH7QCiwOm
+        AQeVAAHzAYsCpgGLAbsf/wHxAZEBiwKmAQcVAAHzAYsCpgGLAbsf/wHxAZEBiwKmAQeVAAHzAYsBpgGK
+        AYsBvB8AAfMBkQGLAqYBBxUAAfMBiwGmAYoBiwG8HwAB8wGRAYsCpgEHUgAr/xgAAfMBiwGmAYoBiwG8
+        HwAB8wGRAYsCpgEHFQAB8wGLAaYBigGLAbwfAAHzAZEBiwKmAQdSAAH0J7sBBwG8AfQYAAHzAYsBpgGK
+        AYsBvB8AAfMBkQGLAqYBBxUAAfMBiwGmAYoBiwG8HwAB8wGRAYsCpgEHTwAD/wHzAbQBkSWLAZEBtAHy
+        Av8WAAHzAYsBpgGKAYsBvAIAAf8Z9AH/AgAB8wGRAYsCpgEHFQAB8wGLAaYBigGLAbwfAAHzAZEBiwKm
+        AQdPAAP/AfMBtAGLJ6YBvAL/FgAB8wGLAaYBigGLAbwCAAH/AbwYBwHzAgAB8wGRAYsCpgEHFQAB8wGL
+        AaYBigGLAbwfAAHzAZEBiwKmAQdPAAH/AvQB8wHwAZEnpgG1AfIB/xYAAfMBiwGmAYoBiwG8AgAB9AG0
+        GK4B8AIAAfMBkQGLAqYBBxUAAfMBiwGmAYoBiwG8HwAB8wGRAYsCpgEHTwAB/wHzAfEB8gH0AbUnpgGL
+        AbsC/xUAAfMBiwGmAYoBiwG8AgAB9AG0GK4B8AIAAfMBkQGLAqYBBxUAAfMBiwGmAYoBiwG8HwAB8wGR
+        AYsCpgEHTwAB/wHyAbsBvAH/AbsBiyemAbQB9AH/FQAB8wGLAaYBigGLAbwCAAH/AfIY8QH0AgAB8wGR
+        AYsCpgEHFQAB8wGLAaYBigGLAbwfAAHzAZEBiwKmAQdPAAH/AfIBtAG7Af8BvAG0AYompgGLAbwB9BUA
+        AfMBiwGmAYoBiwG8AgAB/wH0GPMB/wIAAfMBkQGLAqYBBxUAAfMBiwGmAYoBiwG8HwAB8wGRAYsCpgEH
+        TwAB/wHxAa4BtAH0AfIBBwGLJqYBiwG1AfIC/xMAAfMBiwGmAYoBiwG8AgAB/wHyGPEB9AIAAfMBkQGL
+        AqYBBxUAAfMBiwGmAYoBiwG8HwAB8wGRAYsCpgEHTwAB/wHxAa4BkQG8AfMB8QGLJqYBigGLAbwC/xMA
+        AfMBiwGmAYoBiwG8AgAB9AG0GK4B8AIAAfMBkQGLAqYBBxUAAfMBiwGmAYoBiwG8HwAB8wGRAYsCpgEH
+        TwAB/wHxAa4BiwG0AvMBkQGLJqYBigG7AfQB/xMAAfMBiwGmAYoBiwG8AgAB9AGRGIsBvAIAAfMBkQGL
+        AqYBBxUAAfMBiwGmAYoBiwG8HwAB8wGRAYsCpgEHTwAB/wHxAa4BpgGLAfEB9AG7AYsnpgGRAbwB/xMA
+        AfMBiwGmAYoBiwG8AgAB9AG1GJEB8QIAAfMBkQGLAqYBBxUAAfMBiwGmAYoBiwG8HwAB8wGRAYsCpgEH
+        TwAB/wHxAa4CpgEHAfMB8gG1J6YBiwG0AfQB/xIAAfMBiwGmAYoBiwG8AgAB/xnzAfQCAAHzAZEBiwKm
+        AQcVAAHzAYsBpgGKAYsBvB8AAfMBkQGLAqYBB08AAf8B8QGuAqYBtAHwAfQBuwGKJ6YBiwHxAf8SAAHz
+        AYsBpgGKAYsBvAIAAf8B9BjzAf8CAAHzAZEBiwKmAQcVAAHzAYsBpgGKAYsBvB8AAfMBkQGLAqYBB08A
+        Af8B8QGuAqYBiwG7Af8BvAGLAYompgGLAQcB9BIAAfMBiwGmAYoBiwG8AgAB9AGRGIsBvAIAAfMBkQGL
+        AqYBBxUAAfMBiwGmAYoBiwG8HwAB8wGRAYsCpgEHTwAB/wHxAa4CpgGLAbQB9AHxAbUBiyamAYoBtAHw
+        EgAB8wGLAaYBigGLAbwCAAHzAYsYpgEHAgAB8wGRAYsCpgEHFQAB8wGLAaYBigGLAbwfAAHzAZEBiwKm
+        AQdPAAH/AfEBrgOmAa4B8gHzAbwBiyemAYsBuwL/EAAB8wGLAaYBigGLAbwCAAH0AZEYiwG8AgAB8wGR
+        AYsCpgEHFQAB8wGLAaYBigGLAbwfAAHzAZEBiwKmAQdPAAH/AfEBrgOmAYsBuwHyAfMBkSimAbQB8wH/
+        EAAB8wGLAaYBigGLAbwCAAH/AfQY8wH/AgAB8wGRAYsCpgEHFQAB8wGLAaYBigGLAbwfAAHzAZEBiwKm
+        AQdPAAH/AfEBrgOmAYsBkQHwAfQBtQGLJ6YBiwG7AfQQAAHzAYsBpgGKAYsBvAIAAf8Z9AH/AgAB8wGR
+        AYsCpgEHFQAB8wGLAaYBigGLAbwfAAHzAZEBiwKmAQdPAAH/AfEBrgSmAYoBBwH/AbwBtCemAYoBiwHy
+        EAAB8wGLAaYBigGLAbwCAAH/AbwYBwHzAgAB8wGRAYsCpgEHFQAB8wGLAaYBigGLAbwfAAHzAZEBiwKm
+        AQdPAAH/AfEBrgWmAbUB8gHzAbsopgGKAbwC/w4AAfMBiwGmAYoBiwG8AgAB9AG0GK4B8AIAAfMBkQGL
+        AqYBBxUAAfMBiwGmAYoBiwG8HwAB8wGRAYsCpgEHTwAB/wHxAa4FpgGRAQcB9AHwAYsopgEHAfQB/w4A
+        AfMBiwGmAYoBiwG8AgAB9AG0GK4B8AIAAfMBkQGLAqYBBxUAAfMBiwGmAYoBiwG8HwAB8wGRAYsCpgEH
+        TwAB/wHxAa4FpgGLAbQB9AHyAZEBiyemAbsB9AH/DgAB8wGLAaYBigGLAbwCAAH/AfIY8QH0AgAB8wGR
+        AYsCpgEHFQAB8wGLAaYBigGLAbwfAAHzAZEBiwKmAQdPAAH/AfEBrgamAYsB8gHzAbwBtAGLJKYBiwG0
+        AfEC/w4AAfMBiwGmAYoBiwG8AgAB/wH0B/MC9BD/AgAB8wGRAYsCpgEHFQAB8wGLAaYBigGLAbwfAAHz
+        AZEBiwKmAQdPAAH/AfEBrgamAYsBBwHzAf8BvAG0JIsBtQHyAf8QAAHzAYsBpgGKAYsBvAIAAf8B8gbx
+        AfIB8wH/EgAB8wGRAYsCpgEHFQAB8wGLAaYBigGLAbwfAAHzAZEBiwKmAQdPAAH/AfEBrgamAYoBkQG8
+        Af8C9CTzAfQC/xAAAfMBiwGmAYoBiwG8AgAB9AG0Bq4BkQG1AfISAAHzAZEBiwKmAQcVAAHzAYsBpgGK
+        AYsBvB8AAfMBkQGLAqYBB08AAf8B8QGuB6YBiwG0AfAB8yL0Af8VAAHzAYsBpgGKAYsBvAIAAfQBkQeL
+        AbQB8RIAAfMBkQGLAqYBBxUAAfMBiwGmAYoBiwG8HwAB8wGRAYsCpgEHTwAB/wHxAa4JpgGLAbQBuyEH
+        AfMVAAHzAYsBpgGKAYsBvAIAAfQBtQaRAbQBuwHzEgAB8wGRAYsCpgEHFQAB8wGLAaYBigGLAbwfAAHz
+        AZEBiwKmAQdPAAH/AfEBrgqmA4sgrgHwFQAB8wGLAaYBigGLAbwCAAH/CPMB9AH/AgAB9A+8AbUBiwGK
+        AqYBBxUAAfMBiwGmAYoBiwG8EQAB9AHwDLwBtQGLAYoCpgEHTwAB/wHxAa4tpgEHFQAB8wGLAaYBigGL
+        AbwPAAHyEIsBigOmAQcVAAHzAYsBpgGKAYsBvBEAAfABtQGRDIsBigOmAQdPAAH/AfEBri2mAQcVAAHz
+        AYsBpgGKAYsBvA8AAfEPigWmAQcVAAHzAYsBpgGKAYsBvBEAAbwBkQGLC4oFpgEHTwAB/wHxAa4rpgGL
+        AbQB8RUAAfMBiwGmAYoBiwG8DwAB8RSmAbwVAAHzAYsBpgGKAYsBvBEAAbwBiwGKEKYBvE8AAf8B8QGu
+        FqYBihSLAZEB8AH0FQAB8wGLAaYBigGLAbwPAAHxBKYHiwemAYoBiwG8FQAB8wGLAaYBigGLAbwRAAG8
+        AYsBigKmB4sFpgGKAYsBvE8AAf8B8QGuFaYBiwG0E7UBuwHwAfQB/xUAAfMBiwGmAYoBiwG8DwAB8QKm
+        AYoBiwG7BPMB8gG7AYsGpgGuAbwB9BUAAfMBiwGmAYoBiwG8EQABvAGLAYoBpgGLAbwF8wG7AYsBigOm
+        Aa4BvAH0TwAB/wHxAa4TpgGLAZEBuwHwAfES8gL0Af8WAAHzAYsBpgGKAYsBvA8AAfECpgGLAZEB8QIA
+        Av8B8gG7AYsEpgGLAbQBvAH0Af8VAAHzAYsBpgGKAYsBvBEAAbwBiwGKAaYBiwHzAgAC/wHyAbUBiwOm
+        AZEBuwH0Af9PAAH/AfEBrhKmAYoBkQHwAfQtAAHzAYsBpgGKAYsBvA8AAfECpgGLAZEB8QIAAf8B9AG1
+        AYoEpgKLAfEC/xYAAfMBiwGmAYoBiwG8EQABvAGLAYoBpgGLAfMCAAH/AfMBtAGLA6YBiwG8AfQB/1AA
+        Af8B9AG0AYsPpgGLAa4BuwHyAfQB/y0AAfMBiwGmAYoBiwG8DwAB8QKmAYsBkQHxAv8B8gG1AYsEpgGL
+        AbUB8QH0Av8WAAHzAYsBpgGKAYsBvBEAAbwBiwGKAaYBiwHzAv8B8QG1AYsBigKmAZEBvAH0Av9QAAL/
+        AbwBtA+LAbQBBwH0Av8uAAHzAYsBpgGKAYsBvA8AAfECpgGLAZEB8AH/AfMBuwGKA6YBigGLAbUB8QL/
+        GAAB8wGLAaYBigGLAbwRAAG8AYsBigGmAYsB8wH/AfMBtQGLAqYBigGuAbsB9AH/UgAD/wHxAbQMkQG0
+        AQcB8wP/LwAB8wGLAaYBigGLAbwPAAHxAqYBiwGRAbwB8wG1AYsEpgGLAbsB9AP/GAAB8wGLAaYBigGL
+        AbwRAAG8AYsBigGmAYsB8wHyAbQBiwOmAYsBvAH0Av9TAAL/AfQO8QH0Af8yAAHzAYsBpgGKAYsBvA8A
+        AfECpgGKAYsBtAG1AYsDpgGLAZEBuwHzAf8bAAHzAYsBpgGKAYsBvBEAAbwBiwGKAaYBiwG7AbUBiwGK
+        AqYBkQEHAfQB/5oAAfMBiwGmAYoBiwG8DwAB8QOmAosBigOmAYoBkQEHAfQdAAHzAYsBpgGKAYsBvBEA
+        AbwBiwGKAqYCiwKmAYoBiwEHAfQB/5sAAfMBiwGmAYoBiwG8DwAB8QmmAbQBvAH0Af8dAAHzAYsBpgGK
+        AYsBvBEAAbwBiwGKAqYBigOmAa4BvAH0Av+bAAHzAYsCpgGLAbUP8QG1B6YBiwG0AbwB9AH/HgAB8wGL
+        AqYBiwG1EfEBtQGLBqYBkQG7AfQB/50AAfMBixqmAYoBtAHyAf8gAAHzAYscpgGLAbwB9AH/ngAB8wGL
+        GaYBiwG7AfIC/yAAAfMBixumAZEBvAH0Av+eAAH0GosBtQHzAf8iAAH0G4sBkQG7AfQB/6AAAfQBtBeR
+        AbQBvAH0Av8iAAH0AbQZkQG0AfAB9AL/oAAB/wHyGPEB9AL/IwAB/wHyGvEB9AH//wD/AP8A/wBcAAFC
+        AU0BPgcAAT4DAAEoBAABAQIAAUADAAEBAQABAQYAAQgWAAP/AQAY/wgAGP8IABj/CAAY/wgACf8BwAQA
+        AQcC/wHABAABBwH/CAAJ/wHABAABBwL/AcAEAAEHAf8IAAn/AcAEAAEHAv8BwAQAAQcB/wgACf8BwAQA
+        AQcC/wHABAABBwH/CAAJ/wHABAABBwL/AcAEAAEHAf8IAAn/AcAEAAEHAv8BwAQAAQcB/wgACf8BwAQA
+        AQcC/wHABAABBwH/CAAJ/wHAA/8B/gEHAv8BwAP/Af4BBwH/CAAB/gUAAT8C/wHAA/8B/gEHAv8BwAP/
+        Af4BBwH/CAAB/gUAAT8C/wHAA/8B/gEHAv8BwAP/Af4BBwH/CAAB8AUAAQ8C/wLAAgABBgEHAv8BwAP/
+        Af4BBwH/CAAB8AUAAQ8C/wLAAgABBgEHAv8BwAP/Af4BBwH/CAAB8AUAAQ8C/wLAAgABBgEHAv8BwAP/
+        Af4BBwH/CAAB8AUAAQcC/wLAAgABBgEHAv8BwAP/Af4BBwH/CAAB8AUAAQcC/wLAAgABBgEHAv8BwAP/
+        Af4BBwH/CAAB8AUAAQcC/wLAAgABBgEHAv8BwAP/Af4BBwH/CAAB8AUAAQEC/wLAAgABBgEHAv8BwAP/
+        Af4BBwH/CAAB8AUAAQEC/wLAAgABBgEHAv8BwAP/Af4BBwH/CAAB8AUAAQEC/wLAAgABBgEHAv8BwAP/
+        Af4BBwH/CAAB8AUAAQEC/wLAAgABBgEHAv8BwAP/Af4BBwH/CAAB8AYAAv8CwAIAAQYBBwL/AcAD/wH+
+        AQcB/wgAAfAGAAL/AsACAAEGAQcC/wHAA/8B/gEHAf8IAAHwBgAC/wLAAgABBgEHAv8BwAP/Af4BBwH/
+        CAAB8AYAAv8CwAIAAQYBBwL/AcAD/wH+AQcB/wgAAfAGAAE/Af8CwAIAAQYBBwL/AcAD/wH+AQcB/wgA
+        AfAGAAE/Af8CwAIAAQYBBwL/AcAD/wH+AQcB/wgAAfAGAAE/Af8CwAIAAQYBBwL/AcAD/wH+AQcB/wgA
+        AfAGAAE/Af8CwAIAAQYBBwL/AcAD/wH+AQcB/wgAAfAGAAEPAf8CwAIAAQYBBwL/AcAD/wH+AQcB/wgA
+        AfAGAAEPAf8CwAIAAQYBBwL/AcAD/wH+AQcB/wgAAfAGAAEPAf8CwAIAAQYBBwL/AcAD/wH+AQcB/wgA
+        AfAGAAEPAf8CwAIAAQYBBwL/AcAD/wH+AQcB/wgAAfAGAAE/Af8CwAEHAf8B/gEHAv8BwAP/Af4BBwH/
+        CAAB8AYAAT8B/wLAAQcB/wH+AQcC/wHAA/8B/gEHAf8IAAHwBQABBwL/AsABBwH/Af4BBwL/AcAD/wH+
+        AQcB/wgAAfAFAAEHAv8CwAEHAf8B/gEHAv8BwAP/Af4BBwH/CAAB8AUAAQcC/wLAAQYCAAEHAv8BwAL/
+        AYABAAEHAf8IAAHwBQABBwL/AcAB/wH+AgABBwL/AcAC/wGAAQABBwH/CAAB8AUAAQcC/wHAAf8B/gIA
+        AQcC/wHAAv8BgAEAAQcB/wgAAfAFAAEHAv8BwAH/Af4CAAEHAv8BwAL/AYABAAEHAf8IAAHwBQABBwL/
+        AcAB/wH+AgABBwL/AcAC/wGAAQABBwH/CAAB8AUAAQcC/wHAAf8B/gIAAQcC/wHAAv8BgAEAAQcB/wgA
+        AfAFAAEPAv8BwAH/Af4BBgEAAQcC/wHAAv8BgQGAAQcB/wgAAfACAAEHBf8BwAH/Af4BBgEAAQ8C/wHA
+        Av8BgQGAAQ8B/wgAAfACAAEHBf8BwAH/Af4CAAEPAv8BwAL/AYABAAEPAf8IAAHwAgABDwX/AcAB/wH+
+        AgABPwL/AcAC/wGAAQABPwH/CAAB8AIAAR8F/wHAAf8B/gIAAT8C/wHAAv8BgAEAAT8B/wgAAfgCAAb/
+        AcAB/wH+AQABAQP/AcAC/wGAAQAC/wgACf8BwAH/Af4BAAEHA/8BwAL/AYABAQL/CAAJ/wHAAf8B/gEA
+        AQcD/wHAAv8BgAEBAv8IAAn/AcADAAEPA/8BwAMAAQcC/wgACf8BwAMAAT8D/wHAAwABDwL/CAAJ/wHA
+        AwABPwP/AcADAAEPAv8IAAn/AcADAAT/AcADAAE/Av8IAAn/AcADAAT/AcADAAE/Av8IAAn/AcACAAEB
+        BP8BwAMAA/8IABj/CAAY/wgAGP8IABj/CAAL
+</value>
+  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
